<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Calculator"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textViewHistory"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:autoSizeMaxTextSize="50sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:background="@color/background_color"
        android:gravity="center|end"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:autoSizeMaxTextSize="75sp"
        android:autoSizeMinTextSize="18sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:background="@color/background_color"
        android:gravity="center|end"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAC"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/ac"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/del"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDevide"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/divide"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMulti"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/multi"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="3"
            android:layout_row="0"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/seven"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/eight"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/nine"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/minus"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="3"
            android:layout_row="1"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/four"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/five"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/six"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="2"
            android:layout_row="2"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/plus"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="3"
            android:layout_row="2"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/one"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/two"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/three"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:background="@color/orange"
            android:layout_column="3"
            android:layout_row="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_rowSpan="2"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/dot"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_columnWeight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:height="80dp"
            android:text="@string/zero"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:background="@color/background_color"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"/>
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>